Fixed container padding to keep images from overlapping out of page

--- a/pkp-app/src/app/app/pages/home/home.component.scss
+++ b/pkp-app/src/app/app/pages/home/home.component.scss
@@ -12,7 +12,6 @@
 
 .container {
   max-width: 100%;
-  padding: 0;
 }
 
 .col {
